feat: add icon to browser tab

--- a/src/Frontend/Evolutio.Web/App.razor
+++ b/src/Frontend/Evolutio.Web/App.razor
@@ -18,10 +18,17 @@
             }
         </Found>
         <NotFound>
-            <PageTitle>Not found</PageTitle>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Sorry, there's nothing at this address.</p>
-            </LayoutView>
+            @if (_allowRenderRoute)
+            {
+                <PageTitle>Not found</PageTitle>
+                <LayoutView Layout="@typeof(MainLayout)">
+                    <p role="alert">Sorry, there's nothing at this address.</p>
+                </LayoutView>
+            }
+            else
+            {
+                @* Nada é renderizado para a rota alvo (evita flicker) *@
+            }
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
